Change the page style. Navbar fixed, bookmark overview with scrollbar

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -3,6 +3,7 @@
   background-position: center;
   padding: 150px 0;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  margin-top: 55px;
 }
 
 .banner h1 {
